deploy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-home-ip
spec:
  podSelector:
    matchLabels:
      app: nginx-controller-nginx-ingress
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: <your-home-ip>/32
